--- a/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
+++ b/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/html/cost_contrast_analysis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <html lang="en">
   <head>
@@ -11,11 +11,11 @@
     <title>Document</title>
   </head>
 
-<body>
+<body> -->
 <div id="costCAApp">
-  <!-- <div class="btn-lsit">
+  <div class="btn-lsit">
     <div class="btn-box-left">
-      <button class="btn-itme" @click="refreshData">刷新</button>
+      <!-- <button class="btn-itme" @click="refreshData">刷新</button>
       <button class="btn-itme" @click="goExit">
         退出
       </button>
@@ -24,16 +24,16 @@
       </button>
       <button class="btn-itme" @click="goCurrentTaskControl">
         当前任务管控
+      </button> -->
+      <button class="btn-itme" @click="syncCostMaintenance">
+        同步到成本维护
       </button>
-      <button class="btn-itme" @click="goTaskRTeportDetail">
-        任务汇报详情
+      <button class="btn-itme" @click="goEarnedValueAnalysisChart">
+        任务挣值分析图
       </button>
-      <button class="btn-itme" @click="goProgress">
-        进度维护
-      </button>
-      <button class="btn-itme" @click="gotaskReportDetail">
+      <!-- <button class="btn-itme" @click="goTaskReportDetail">
         导出excel文件
-      </button>
+      </button> -->
     </div>
     <div class="btn-box-right">
       <button class="btn-itme" @click="showSelectBox">筛选</button>
@@ -41,12 +41,33 @@
   </div>
   <div class="select-box" v-show="ifSelectBoxShow">
     <div class="select-options">
-      
+      <div class="sel-item">
+        <span class="sel-item-title">显示选项：</span>
+        <el-radio-group 
+        v-model="filterCondition.conditionOne"
+        @change="conditionOneChange"
+        >
+          <el-radio :label="1">全部</el-radio>
+          <el-radio :label="2">仅显示差异</el-radio>
+        </el-radio-group>
+      </div>
+      <div class="sel-item">
+        <span class="sel-item-title">任务状态：</span>
+        <el-radio-group 
+        v-model="filterCondition.conditionTwo"
+        @change="conditionTwoChange"
+        >
+          <el-radio :label="1">全部</el-radio>
+          <el-radio :label="2">未开始</el-radio>
+          <el-radio :label="3">进行中</el-radio>
+          <el-radio :label="4">已完成</el-radio>
+        </el-radio-group>
+      </div>
     </div>
-  </div> -->
+  </div>
   <div class="table-content">
     <div class="table-box table-left">
-      <el-table ref="projectTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="proTableData" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true"  default-expand-all
+      <el-table ref="projectTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="proTableData" :row-class-name="tableRowClassName" style="margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true"  default-expand-all
       :tree-props="{ children: 'children', hasChildren: 'hasChildren' }"
       @row-dblclick="currentTaskClick"
       >
@@ -110,12 +131,12 @@
         </div>
         <div class="table-info-box" v-if="currentTaskInfo.open">
           <el-table ref="TableRight" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="currentTaskInfo.data" style="margin:10px 0 10px 0;" :style="{width:tableWidth}" :cell-style="cellStyle" row-key="task_id" :border="true">
-            <el-table-column prop="plan_duration" label="计划工期(工日)" width="100"></el-table-column>
+            <el-table-column prop="plan_duration" label="计划工期(工日)" width="120"></el-table-column>
             <el-table-column prop="plan_quantities" label="计划工程量" width="100"></el-table-column>
             <el-table-column prop="plan_cost" label="计划总费用" width="100"></el-table-column>
             <el-table-column prop="Adjusted_cost" label="调整后总费用" width="100"></el-table-column>
             <!-- <el-table-column prop="duration_after_adjustment" label="调整后工期" width="100"></el-table-column> -->
-            <el-table-column prop="actual_duration" label="实际工期(工日)" width="100"></el-table-column>
+            <el-table-column prop="actual_duration" label="实际工期(工日)" width="120"></el-table-column>
             <el-table-column prop="actual_quantities" label="实际工程量" width="100"></el-table-column>
             <el-table-column prop="actual_cost" label="实际总费用" width="100"></el-table-column>
             <el-table-column prop="deviation_reason" label="偏差原因" ></el-table-column>
@@ -129,7 +150,7 @@
         </div>
       </div>
       <!-- 当前任务挣值数据分析 -->
-      <div class="detail-info-box" v-show="currentTask&&currentTask.task_status==='3'">
+      <div class="detail-info-box" v-show="ifFollowTaskShow">
         <div class="title-info-box">
           <div class="drop-btn">
             <i class="el-icon-caret-bottom" @click="iconArrowClick3(earnedValueAnalysisSuggestions)" v-if="earnedValueAnalysisSuggestions.open"></i>
@@ -152,7 +173,7 @@
         </div>
       </div>
       <!-- 后续任务处理 -->
-      <div class="detail-info-box" v-show="currentTask&&currentTask.task_status==='3'">
+      <div class="detail-info-box" v-show="ifFollowTaskShow">
         <div class="title-info-box">
           <div class="drop-btn">
             <i class="el-icon-caret-bottom" @click="iconArrowClick4(followTaskProcessing)" v-if="followTaskProcessing.open"></i>
@@ -162,15 +183,33 @@
         </div>
         <div class="table-info-box" v-if="followTaskProcessing.open">
           <el-table ref="TableRight" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="followTaskProcessing.data" style="margin:10px 0 10px 0;" :style="{width:tableWidth}" :cell-style="cellStyle" row-key="task_id" :border="true">
-            <el-table-column prop="follow_task_name" label="后续任务名称" >
+            <el-table-column label="后续任务名称" >
               <template slot-scope="scope">
-                <div class="search-icon">
+                <div class="search-icon" v-if="scope.$index===(followTaskProcessing.data.length-1)" @click="goSelectFollowTask">
                   <span style="font-size: 14px;">请选择后续任务</span>
                   <i class="el-icon-search"></i>
                 </div>
+                <div  v-else>
+                  <span style="font-size: 14px;">${scope.row.task_name}</span>
+                </div>
               </template>
             </el-table-column>
-            <el-table-column prop="handling_measures" label="后续任务处理措施"></el-table-column>
+            <el-table-column label="后续任务处理措施">
+              <template slot-scope="scope">
+                <div class="search-icon" v-if="scope.$index===(followTaskProcessing.data.length-1)">
+                  <span style="font-size: 14px;">请输入处理措施</span>
+                </div>
+                <div  v-else>
+                  <el-input 
+                  v-model="scope.row.handling_measures" 
+                  placeholder="请输入处理措施"
+                  maxlength="50"
+                  size="small"
+                  @change="hmChange"
+                  ></el-input>
+                </div>
+              </template>
+            </el-table-column>
           </el-table>
         </div>
       </div>
@@ -181,13 +220,13 @@
       <div class="message-title">
         <span>提醒</span>
       </div>
-      <div class="message-info" v-if="messageData.length>0">
+      <!-- <div class="message-info" v-if="messageData.length>0">
         <div class="message-item" v-for="(item, index) in messageData" :key="index">
           <span v-show="item.task_status==='1'">${item.task_name}任务已完成，请注意后续任务的安排！</span>
           <span v-show="item.task_status==='2'">${item.task_name}任务已滞后，请注意该任务的管控！</span>
         </div>
-      </div>
-      <div class="message-info-empty" v-else>
+      </div> -->
+      <div class="message-info-empty">
         暂无数据!
       </div>
       <div class="message-btn-list">
@@ -198,10 +237,9 @@
     </div>
   </div>
 </div>
-<script src="../js/lodash.js"></script>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
-    <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
-</html>
+</html> -->
