--- a/后台管理中心/数据统计/data_statistics_chart_1.0/html/data_statistics_chart.html
+++ b/后台管理中心/数据统计/data_statistics_chart_1.0/html/data_statistics_chart.html
@@ -20,6 +20,7 @@
 </div>
 <script src="../js/vue.min.js"></script>
 		<script src="../js/echarts.min.js"></script>
+		<script src="../js/macarons.js"></script>
 		<script src="../js/vue.min.js"></script>
 		<script src="../js/element.js"></script>
 		<script src="../js/test.js"></script>
