--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/html/resource_allocation.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <body lang="en">
 
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/main.css" />
 
     <title>Document</title>
-  </head>
+  </head> -->
 <div id="resourceAllocationApp">
   <div class="btn-lsit">
     <button class="btn-itme" @click="SetRole">
@@ -30,195 +30,198 @@
       资源调配
     </button>
   </div>
-  <el-table ref="resourceAllocationTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:1520px;margin:10px 0 10px 0;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
-  :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
-    <el-table-column width="40" type="select">
-      <template slot="header" slot-scope="scope">
-        <el-checkbox @change="handleCheckAllChange" v-model="allChecked"></el-checkbox>
-      </template>
-      <template slot-scope="scope">
-        <el-checkbox @change="itemChange(scope.row)" v-model="scope.row.checked"></el-checkbox>
-      </template>
-    </el-table-column>
-    <el-table-column type="index" label="序号" width="60" align="center">
-    </el-table-column>
-    <el-table-column prop="task_name" label="WBS任务名称"></el-table-column>
-    <el-table-column prop="wbs" label="任务代码" width="120"></el-table-column>
-    <el-table-column prop="quality_action" label="纠偏措施" width="120"></el-table-column>
-    <el-table-column label="工期" width="120">
-      <template slot-scope="scope">
-        <div>
-          ${ scope.row.duration }
-        </div>
-      </template>
-    </el-table-column>
-    <el-table-column label="开始日期" width="120">
-      <template slot-scope="scope">
-        <div v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
-          ${ scope.row.subArray[0].plan_starttime }
-        </div>
-        <div class="type-one" v-show="scope.row.task_type==='1'">
-          <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            ${ item.plan_starttime }
+  <div class="table-box">
+    <el-table ref="resourceAllocationTable" :header-cell-style="{height:'50px',background:'#f6f7f9',color:'#6b6b6b',fontWeight:'500',fontSize:'12px'}" :data="tableData" style="width:1520px;" :cell-style="cellStyle" row-key="task_id" :border="true" :height="tableHeight" default-expand-all
+    :tree-props="{ children: 'children', hasChildren: 'hasChildren' }">
+      <el-table-column width="40" type="select">
+        <template slot="header" slot-scope="scope">
+          <el-checkbox @change="handleCheckAllChange" v-model="allChecked"></el-checkbox>
+        </template>
+        <template slot-scope="scope">
+          <el-checkbox @change="itemChange(scope.row)" v-model="scope.row.checked"></el-checkbox>
+        </template>
+      </el-table-column>
+      <el-table-column type="index" label="序号" width="60" align="center">
+      </el-table-column>
+      <el-table-column prop="task_name" label="WBS任务名称"></el-table-column>
+      <el-table-column prop="wbs" label="任务代码" width="120"></el-table-column>
+      <el-table-column prop="quality_action" label="纠偏措施" width="120"></el-table-column>
+      <el-table-column label="工期" width="120">
+        <template slot-scope="scope">
+          <div>
+            ${ scope.row.duration }
           </div>
-        </div>
-      </template>
-    </el-table-column>
-    <el-table-column label="结束日期" width="120">
-      <template slot-scope="scope">
-        <div  v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
-          ${ scope.row.subArray[0].plan_endtime }
-        </div>
-        <div class="type-one" v-show="scope.row.task_type==='1'">
-          <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            ${ item.plan_endtime }
+        </template>
+      </el-table-column>
+      <el-table-column label="开始日期" width="120">
+        <template slot-scope="scope">
+          <div v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
+            ${ scope.row.subArray[0].plan_starttime }
           </div>
-        </div>
-      </template>
-    </el-table-column>
-    <el-table-column label="阶段" width="160">
-      <template slot-scope="scope">
-        <div class="recheck-box" v-show="scope.row.task_type==='3'">
-          <div class="recheck-top">
-            首次复核
-          </div>
-          <div class="recheck-mid">
-            <div class="mid-left">
-              整改
-            </div>
-            <div class="mid-right">
-              <div class="mid-right-item mid-right-top">
-                修改
-              </div>
-              <div class="mid-right-item">
-                修改确认
-              </div>
+          <div class="type-one" v-show="scope.row.task_type==='1'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              ${ item.plan_starttime }
             </div>
           </div>
-          <div class="recheck-bot">
-            复核确认
+        </template>
+      </el-table-column>
+      <el-table-column label="结束日期" width="120">
+        <template slot-scope="scope">
+          <div  v-show="scope.row.task_type==='3'||scope.row.task_type==='2'">
+            ${ scope.row.subArray[0].plan_endtime }
           </div>
-        </div>
-      </template>
-    </el-table-column>
-    <el-table-column label="持续时间" width="120">
-      <template slot-scope="scope">
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].first_duration }
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${scope.row.subArray[0].modify_duration }
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].mod_con_duration }
-        </div>
-        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].confirm_duration }
-        </div>
-        <div v-show="scope.row.task_type==='2'">
-          ${ scope.row.subArray[0].first_duration }
-        </div>
-        <div class="type-one" v-show="scope.row.task_type==='1'">
-          <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            ${ item.first_duration }
+          <div class="type-one" v-show="scope.row.task_type==='1'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              ${ item.plan_endtime }
+            </div>
           </div>
-        </div>
-      </template>
-    </el-table-column>
-    <el-table-column label="承担人角色" width="120">
-      <template slot-scope="scope">
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].owner_role }
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].the_owner_role }
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].owner_role }
-        </div>
-        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].owner_role }
-        </div>
-        <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
-          ${ scope.row.owner_role }
-        </div> -->
-        <div v-show="scope.row.task_type==='2'">
-          ${ scope.row.subArray[0].owner_role }
-        </div>
-        <div class="type-one" v-show="scope.row.task_type==='1'">
-          <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            ${ item.owner_role }
+        </template>
+      </el-table-column>
+      <el-table-column label="阶段" width="160">
+        <template slot-scope="scope">
+          <div class="recheck-box" v-show="scope.row.task_type==='3'">
+            <div class="recheck-top">
+              首次复核
+            </div>
+            <div class="recheck-mid">
+              <div class="mid-left">
+                整改
+              </div>
+              <div class="mid-right">
+                <div class="mid-right-item mid-right-top">
+                  修改
+                </div>
+                <div class="mid-right-item">
+                  修改确认
+                </div>
+              </div>
+            </div>
+            <div class="recheck-bot">
+              复核确认
+            </div>
           </div>
-        </div>
-      </template>
-    </el-table-column>
-    <el-table-column label="承担人名称" width="120">
-      <template slot-scope="scope">
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
-          <span v-else></span>
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          <span v-if="scope.row.subArray[0].the_isreply==='2'">${ scope.row.subArray[0].the_owner }</span>
-          <span v-else></span>
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
-          <span v-else></span>
-        </div>
-        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
-          <span v-else></span>
-        </div>
-        <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
-          ${ scope.row.owner }
-        </div> -->
-        <div v-show="scope.row.task_type==='2'">
-          <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
-          <span v-else></span>
-        </div>
-        <div class="type-one" v-show="scope.row.task_type==='1'">
-          <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            <span v-if="item.isreply==='2'">${ item.owner }</span>
+        </template>
+      </el-table-column>
+      <el-table-column label="持续时间" width="120">
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].first_duration }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${scope.row.subArray[0].modify_duration }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].mod_con_duration }
+          </div>
+          <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].confirm_duration }
+          </div>
+          <div v-show="scope.row.task_type==='2'">
+            ${ scope.row.subArray[0].first_duration }
+          </div>
+          <div class="type-one" v-show="scope.row.task_type==='1'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              ${ item.first_duration }
+            </div>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column label="承担人角色" width="120">
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].owner_role }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].the_owner_role }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].owner_role }
+          </div>
+          <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].owner_role }
+          </div>
+          <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
+            ${ scope.row.owner_role }
+          </div> -->
+          <div v-show="scope.row.task_type==='2'">
+            ${ scope.row.subArray[0].owner_role }
+          </div>
+          <div class="type-one" v-show="scope.row.task_type==='1'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              ${ item.owner_role }
+            </div>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column label="承担人名称" width="120">
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
             <span v-else></span>
           </div>
-        </div>
-      </template>
-    </el-table-column>
-    <el-table-column label="承担人技能" width="120">
-      <template slot-scope="scope">
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].skill }
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].the_skill }
-        </div>
-        <div class="checek-man" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].skill }
-        </div>
-        <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
-          ${ scope.row.subArray[0].skill }
-        </div>
-        <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
-          ${ scope.row.owner }
-        </div> -->
-        <div v-show="scope.row.task_type==='2'">
-          ${ scope.row.subArray[0].skill }
-        </div>
-        <div class="type-one" v-show="scope.row.task_type==='1'">
-          <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
-            ${ item.skill }
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            <span v-if="scope.row.subArray[0].the_isreply==='2'">${ scope.row.subArray[0].the_owner }</span>
+            <span v-else></span>
           </div>
-        </div>
-      </template>
-    </el-table-column>
-  </el-table>
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+            <span v-else></span>
+          </div>
+          <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
+            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+            <span v-else></span>
+          </div>
+          <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
+            ${ scope.row.owner }
+          </div> -->
+          <div v-show="scope.row.task_type==='2'">
+            <span v-if="scope.row.subArray[0].isreply==='2'">${ scope.row.subArray[0].owner }</span>
+            <span v-else></span>
+          </div>
+          <div class="type-one" v-show="scope.row.task_type==='1'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              <span v-if="item.isreply==='2'">${ item.owner }</span>
+              <span v-else></span>
+            </div>
+          </div>
+        </template>
+      </el-table-column>
+      <el-table-column label="承担人技能" width="120">
+        <template slot-scope="scope">
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].skill }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].the_skill }
+          </div>
+          <div class="checek-man" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].skill }
+          </div>
+          <div class="checek-man" style="border:none" v-show="scope.row.task_type==='3'">
+            ${ scope.row.subArray[0].skill }
+          </div>
+          <!-- <div v-show="scope.row.task_type==='1' ||scope.row.task_type==='2'">
+            ${ scope.row.owner }
+          </div> -->
+          <div v-show="scope.row.task_type==='2'">
+            ${ scope.row.subArray[0].skill }
+          </div>
+          <div class="type-one" v-show="scope.row.task_type==='1'">
+            <div class="checek-man" v-for="(item, index) in scope.row.subArray" :key="index">
+              ${ item.skill }
+            </div>
+          </div>
+        </template>
+      </el-table-column>
+    </el-table>
+  </div>
+
 </div>
-<script src="../js/lodash.js"></script>
+<!-- <script src="../js/lodash.js"></script>
     <script src="../js/vue.min.js"></script>
     <script src="../js/vue.js"></script>
     <script src="../js/element.js"></script>
     <script src="../js/test.js"></script>
   </body>
 
-</body>
+</body> -->
